# hporterly

./: .editorconfig  .env.example  .gitignore  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE-TERMS.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  commercial_license_request.yml  feature_request.yml
.github/workflows/: ci.yml
CLA/: CORPORATE_CLA.md  INDIVIDUAL_CLA.md  README.md
docs/: API.md  ARCHITECTURE.md  THREAT_MODEL.md
docs/dev-handoff/: 00_INDEX_COMPLETUDE.md  01_CHECKLIST_REPRODUCTION_IDENTIQUE.md  02_RESUME_TECHNIQUE_PROJET.md  03_COMMANDES_LOCALES_ET_LANCEMENT.md  04_VARIABLES_ENVIRONNEMENT.md  05_SPECIFICATION_FONCTIONNELLE.md  06_REGLES_METIER.md  07_MATRICE_RBAC.md  08_CONTRATS_API_WEBSOCKET.md  09_SCENARIOS_E2E_RECETTE.md  10_REFERENCE_UI_UX.md  11_DEPLOIEMENT_EXPLOITATION_RUNBOOK.md  12_INTEGRATIONS_EXTERNES_ET_DEPENDANCES.md  13_TESTS_RECETTE_PREUVES.md  14_DECISIONS_TECHNIQUES_ADR.md  15_CHECKLIST_AVANT_PARTAGE_A_UN_TIERS.md  README_PACK.md  generer_curl_scripts_depuis_postman.py  generer_endpoints_rbac_auto.py  generer_inventaires.ps1  generer_pack_pret_a_partager.py  generer_postman_collection.py
examples/: full_demo_transfers.json  minimal_demo_transfers.json
migrations/20260101000100_create_core_tables/: down.sql  up.sql
scripts/: generate_fake_data.py  sanity_check_no_sensitive_strings.py  seed_demo_patients.py  seed_demo_users.py
src/: auth.rs  config.rs  db.rs  errors.rs  main.rs  models.rs  schema.rs  state.rs
(+39 files in other folders)
