[package]
name = "hporterly-backend"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["Assan ABDOU-OUSSENI"]
license = "GPL-3.0-or-later"
description = "Generic hospital patient transfer coordination backend (anonymized demo-safe OSS release)"
repository = "https://github.com/assaneben/Hporterly"

[dependencies]
actix = "0.13"
actix-cors = "0.7"
actix-governor = "0.5"
actix-web = "4.4"
actix-web-actors = "4.2"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde", "clock"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
diesel_migrations = "2.1"
dotenvy = "0.15"
env_logger = "0.11"
jsonwebtoken = "9.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
actix-rt = "2"
